--- a/public_html/Sass/04. Pages/_index.scss
+++ b/public_html/Sass/04. Pages/_index.scss
@@ -3,8 +3,9 @@
     display: flex;
     align-items: center;
     @media screen and (max-width: 620px){
-        padding-top: 64px;
+        padding-top: 70px;
         height: 60vh;
+        justify-content: center;
         flex-direction: column-reverse;
         .col{
             width: 90%;
@@ -15,12 +16,11 @@
             object-fit: cover;
             z-index: 3;
             width: 100%;
-            height: 80vh;
+            height: 60vh;
             filter: brightness(40%);
         }
     }
     @media screen and (min-width: 620px){
-        display: flex;
         justify-content: center;
         min-height: 80vh;
         .col{
@@ -64,6 +64,7 @@
             margin-bottom: 40px;
         }
         a{
+            font-size: 22px;
             &:nth-child(1){
                 margin-right: 20px;
             }
