--- a/public_html/Sass/04. Pages/_index.scss
+++ b/public_html/Sass/04. Pages/_index.scss
@@ -8,6 +8,7 @@
         justify-content: center;
         flex-direction: column-reverse;
         .col{
+            display: flex;
             width: 90%;
             margin: auto;
         }
@@ -24,6 +25,9 @@
         justify-content: center;
         min-height: 80vh;
         .col{
+            display: flex;
+            justify-content: center;
+            align-items: center;
             padding: 10px 10%;
             width: min(1200px, 80%);
             p{
@@ -33,6 +37,7 @@
             }
             h1{
                 width: min(500px, 100%);
+                text-align: center;
             }
         }
         video{
@@ -122,4 +127,76 @@
 .load{
     opacity: 0;
     transition: opacity 600ms linear;
+}
+
+.swiper{
+    padding: 40px 0;
+}
+
+#popupWindow{
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    flex-direction: column;
+    &[aria-label="display"]{
+        display: flex;
+    }
+    &[aria-label="hidden"]{
+        display: none;
+    }
+    .window-wrapper{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #19253c;
+        border: 1px solid #d4d4d433;
+        border-radius: 8px;
+        a:nth-child(1){
+            width: 100%;
+            text-align: end;
+            font-size: 40px;
+            span{
+                &:hover{
+                    cursor: pointer;
+                }
+            }
+        }
+        @media screen and (max-width: 600px){
+            width: calc(90% - 40px);
+            margin: auto;
+            padding: 10px 20px 40px 20px;
+            p{
+                font-size: 20px;
+            }
+        }
+        @media screen and (min-width: 600px){
+            max-width: 600px;
+            height: 400px;
+            padding: 10px 40px 40px 40px;
+            p{
+                font-size: 22px;
+            }
+        }
+        p{
+            line-height: 2;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 80%;
+            text-align: center;
+        }
+        a:nth-last-child(1){
+            margin-top: auto;
+            border-radius: 8px;
+            &:hover{
+                cursor: pointer;
+            }
+        }
+    }
 }
