--- a/public_html/Sass/style.css
+++ b/public_html/Sass/style.css
@@ -3223,4 +3223,10 @@ h5, .h5 {
 }
 #popupWindow .window-wrapper a:nth-last-child(1):hover {
   cursor: pointer;
+}
+
+.swiper .swiper-wrapper .review-box {
+  background-color: #2A5BCE;
+  padding: 10px 20px;
+  border-radius: 8px;
 }/*# sourceMappingURL=style.css.map */
