--- a/public_html/Sass/04. Pages/_index.scss
+++ b/public_html/Sass/04. Pages/_index.scss
@@ -200,3 +200,12 @@
         }
     }
 }
+.swiper{
+    .swiper-wrapper{
+        .review-box{
+            background-color: $blue-1;
+            padding: 10px 20px;
+            border-radius: 8px;
+        }
+    }   
+}
