--- a/public_html/Sass/04. Pages/_index.scss
+++ b/public_html/Sass/04. Pages/_index.scss
@@ -229,6 +229,7 @@
             height: 200px;
             user-select: none;
             .reviewer{
+                margin-top: 10px;
                 font-weight: 900;
             }
             .rating-wrapper{
