--- a/public_html/Sass/style.css
+++ b/public_html/Sass/style.css
@@ -3008,6 +3008,7 @@ h5, .h5 {
     flex-direction: column-reverse;
   }
   .index-hero .col {
+    display: flex;
     width: 90%;
     margin: auto;
   }
@@ -3027,16 +3028,20 @@ h5, .h5 {
     min-height: 80vh;
   }
   .index-hero .col {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 10px 10%;
     width: min(1200px, 80%);
   }
   .index-hero .col p {
     width: min(400px, 50%);
-    line-height: 1.4;
+    line-height: 2;
     color: #bbbbbb;
   }
   .index-hero .col h1 {
     width: min(500px, 100%);
+    text-align: center;
   }
   .index-hero video {
     position: absolute;
@@ -3144,4 +3149,128 @@ h5, .h5 {
 .load {
   opacity: 0;
   transition: opacity 600ms linear;
+}
+
+.swiper {
+  padding: 40px 0;
+}
+
+#popupWindow {
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  flex-direction: column;
+}
+#popupWindow[aria-label=display] {
+  display: flex;
+}
+#popupWindow[aria-label=hidden] {
+  display: none;
+}
+#popupWindow .window-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #19253c;
+  border: 1px solid rgba(212, 212, 212, 0.2);
+  border-radius: 8px;
+}
+#popupWindow .window-wrapper a:nth-child(1) {
+  width: 100%;
+  text-align: end;
+  font-size: 40px;
+}
+#popupWindow .window-wrapper a:nth-child(1) span:hover {
+  cursor: pointer;
+}
+@media screen and (max-width: 600px) {
+  #popupWindow .window-wrapper {
+    width: calc(90% - 40px);
+    margin: auto;
+    padding: 10px 20px 40px 20px;
+  }
+  #popupWindow .window-wrapper p {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 600px) {
+  #popupWindow .window-wrapper {
+    max-width: 600px;
+    height: 400px;
+    padding: 10px 40px 40px 40px;
+  }
+  #popupWindow .window-wrapper p {
+    font-size: 22px;
+  }
+}
+#popupWindow .window-wrapper p {
+  line-height: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80%;
+  text-align: center;
+}
+#popupWindow .window-wrapper a:nth-last-child(1) {
+  margin-top: auto;
+  border-radius: 8px;
+}
+#popupWindow .window-wrapper a:nth-last-child(1):hover {
+  cursor: pointer;
+}
+
+.swiper {
+  overflow-y: hidden;
+  margin: 80px 0;
+}
+.swiper:hover {
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+.swiper .swiper-wrapper {
+  transition: transform 600ms ease;
+}
+@media screen and (max-width: 400px) {
+  .swiper .swiper-wrapper .review-box {
+    width: calc(90vw - 40px);
+    margin-left: 5vw;
+  }
+}
+@media screen and (min-width: 400px) {
+  .swiper .swiper-wrapper .review-box {
+    width: 400px;
+    margin: 0 10px;
+  }
+}
+.swiper .swiper-wrapper .review-box {
+  display: flex;
+  flex-direction: column;
+  background-color: #2A5BCE;
+  padding: 10px 20px;
+  border-radius: 8px;
+  height: 200px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.swiper .swiper-wrapper .review-box .reviewer {
+  margin-top: 10px;
+  font-weight: 900;
+}
+.swiper .swiper-wrapper .review-box .rating-wrapper-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: auto;
+}
+.swiper .swiper-wrapper .review-box .rating-wrapper-wrapper p {
+  margin: 0;
 }/*# sourceMappingURL=style.css.map */
