--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2653,6 +2653,57 @@ body {
   height: 100px;
 }
 
+.lds-dual-ring {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+}
+.lds-dual-ring.large {
+  width: 80px;
+  height: 80px;
+}
+.lds-dual-ring.large:after {
+  content: " ";
+  display: block;
+  width: 80px;
+  height: 80px;
+  margin: 0px;
+  border-radius: 50%;
+  border: 16px solid #fff;
+  border-color: #fff transparent #fff transparent;
+  -webkit-animation: lds-dual-ring 1.2s linear infinite;
+          animation: lds-dual-ring 1.2s linear infinite;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0px;
+  border-radius: 50%;
+  border: 4px solid #fff;
+  border-color: #fff transparent #fff transparent;
+  -webkit-animation: lds-dual-ring 1.2s linear infinite;
+          animation: lds-dual-ring 1.2s linear infinite;
+}
+
+@-webkit-keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .grid {
   display: flex;
 }
@@ -3337,4 +3388,15 @@ h5, .h5 {
   padding-top: 10px;
   padding-left: 10px;
   font-family: "Roboto", sans-serif;
+}
+.contact-form button {
+  width: 200px;
+  border-radius: 6px;
+  border: 1px solid transparent;
+  background-color: #2A5BCE;
+  color: #fff;
+}
+.contact-form button:hover {
+  cursor: pointer;
+  opacity: 0.8;
 }/*# sourceMappingURL=style.css.map */
