--- a/public/styles/02. Components/_footer.scss
+++ b/public/styles/02. Components/_footer.scss
@@ -35,7 +35,7 @@ footer{
                 flex-direction: row;
                 .footer-col{
                     padding: 8px 10px;
-                    width: calc(33% - 20px);
+                    width: 100%;
                 }
             }
             @media screen and (max-width: 650px){
