--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2813,12 +2813,11 @@ header nav .nav-desktop ul li a:hover {
     display: none;
   }
 }
-header nav #nav-button svg {
-  fill: #fff;
-  width: 40px;
-  height: 40px;
+header nav #nav-button i {
+  color: #fff;
+  font-size: 30px;
 }
-header nav #nav-button svg:hover {
+header nav #nav-button i:hover {
   cursor: pointer;
 }
 
@@ -2887,7 +2886,7 @@ footer .footer-row {
   }
   footer .footer-row.footer-row-col .footer-col {
     padding: 8px 10px;
-    width: calc(33% - 20px);
+    width: 100%;
   }
 }
 @media screen and (max-width: 650px) {
@@ -3060,6 +3059,9 @@ h5, .h5 {
   }
   .index-hero .col {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     width: 90%;
     margin: auto;
   }
@@ -3129,10 +3131,8 @@ h5, .h5 {
   }
 }
 .index-hero .button-wrapper a {
+  margin-top: 10px;
   font-size: 22px;
-}
-.index-hero .button-wrapper a:nth-child(1) {
-  margin-right: 20px;
 }
 
 .index-row {
@@ -3204,6 +3204,12 @@ h5, .h5 {
 
 .swiper {
   padding: 40px 0;
+}
+.swiper h2 {
+  font-size: 54px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 #popupWindow {
@@ -3329,11 +3335,27 @@ h5, .h5 {
 .before-after-wrapper {
   margin: 20px 0;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+}
+@media screen and (max-width: 850px) {
+  .before-after-wrapper {
+    justify-content: center;
+    flex-direction: column;
+  }
+  .before-after-wrapper .before-after {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-width: 850px) {
+  .before-after-wrapper {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .before-after-wrapper .before-after {
+    width: 45%;
+  }
 }
 .before-after-wrapper .before-after {
-  width: 45%;
   height: 250px;
   overflow: hidden;
   border-radius: 6px;
@@ -3358,6 +3380,100 @@ h5, .h5 {
   display: block;
 }
 
+.pitch-wrapper {
+  display: flex;
+  overflow: hidden;
+  margin-top: 20px;
+}
+@media screen and (max-width: 1300px) {
+  .pitch-wrapper {
+    flex-direction: column;
+  }
+  .pitch-wrapper .pitch-box {
+    width: min(600px, 80%);
+    margin: 0 auto 10px auto;
+  }
+}
+@media screen and (min-width: 1300px) {
+  .pitch-wrapper {
+    flex-direction: row;
+  }
+  .pitch-wrapper .pitch-box {
+    width: calc(33.3333333333% - 20px);
+    margin: 0 10px;
+  }
+}
+.pitch-wrapper .pitch-box {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 10px 20px;
+  border-radius: 8px;
+  height: 200px;
+  overflow: hidden;
+  color: #fff;
+  z-index: 10;
+  border: 1px solid rgba(255, 255, 255, 0.438);
+}
+.pitch-wrapper .pitch-box img {
+  filter: brightness(0.6);
+}
+.pitch-wrapper .pitch-box span {
+  position: absolute;
+  z-index: 20;
+}
+.pitch-wrapper .pitch-box span:nth-child(1) {
+  bottom: 50%;
+  font-weight: 600;
+  font-size: 26px;
+}
+.pitch-wrapper .pitch-box span:nth-child(2) {
+  bottom: -50%;
+}
+.pitch-wrapper .pitch-box:hover span:nth-child(1) {
+  -webkit-animation: smooth_appear1 600ms ease forwards;
+          animation: smooth_appear1 600ms ease forwards;
+}
+.pitch-wrapper .pitch-box:hover span:nth-child(2) {
+  -webkit-animation: smooth_appear 600ms ease forwards;
+          animation: smooth_appear 600ms ease forwards;
+}
+
+@-webkit-keyframes smooth_appear {
+  from {
+    bottom: -20%;
+  }
+  to {
+    bottom: 20%;
+  }
+}
+
+@keyframes smooth_appear {
+  from {
+    bottom: -20%;
+  }
+  to {
+    bottom: 20%;
+  }
+}
+@-webkit-keyframes smooth_appear1 {
+  from {
+    bottom: 50%;
+  }
+  to {
+    bottom: 70%;
+  }
+}
+@keyframes smooth_appear1 {
+  from {
+    bottom: 50%;
+  }
+  to {
+    bottom: 70%;
+  }
+}
 .contact-form {
   display: flex;
   flex-direction: column;
@@ -3366,7 +3482,7 @@ h5, .h5 {
 .contact-form .input-wrapper {
   display: flex;
   flex-direction: column;
-  width: 48%;
+  width: min(100%, 500px);
   margin-bottom: 20px;
 }
 .contact-form .input-wrapper label {
