--- a/public/styles/04. Pages/_index.scss
+++ b/public/styles/04. Pages/_index.scss
@@ -329,12 +329,6 @@
         height: 200px;
         overflow: hidden;
         color: #fff;
-        text-shadow: 0 0 10px #03bcf4,
-        0 0 20px #03bcf4,
-        0 0 40px #03bcf4,
-        0 0 80px #03bcf4,
-        0 0 160px #03bcf4,
-        0 0 400px #03bcf4;
         z-index: 2;
         border: 1px solid $white-2;
         &:nth-child(2){
@@ -343,7 +337,7 @@
             }
         }
         img{
-            //filter: brightness(0.8);
+            filter: brightness(0.8);
             width: 120%;
             height: 200%;
             &:nth-last-child(1){
