--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -3414,7 +3414,6 @@ h5, .h5 {
   height: 200px;
   overflow: hidden;
   color: #fff;
-  text-shadow: 0 0 10px #03bcf4, 0 0 20px #03bcf4, 0 0 40px #03bcf4, 0 0 80px #03bcf4, 0 0 160px #03bcf4, 0 0 400px #03bcf4;
   z-index: 2;
   border: 1px solid rgba(255, 255, 255, 0.438);
 }
@@ -3422,6 +3421,7 @@ h5, .h5 {
   transform: rotate(180deg);
 }
 .pitch-wrapper .pitch-box img {
+  filter: brightness(0.8);
   width: 120%;
   height: 200%;
 }
